--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "seneca": "*"
   },
   "devDependencies": {
+    "body-parser": "^1.5.2",
+    "express": "^4.7.2",
     "mocha": "^1.20.1"
   },
   "files": [
